--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Ohmyfood est un site qui répertorie les menus de restaurants gastronomiques. Cet outil permet aux clients de composer le menu de leur repas pour que les plats soient prêts à leur arrivée.">
-        <link rel="stylesheet" href="css/style.css">        
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Shrikhand&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/115d64e2bc.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/style-index.css">        
     </head>
 
     <body>
 
         <!-- Header -->
         <header class="header">
-            <a><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"></a>
+            <h1 class="header__logo">Ohmyfood</h1>
         </header>
 
         <!-- Location -->
