--- a/menu-note-enchantee.html
+++ b/menu-note-enchantee.html
@@ -5,7 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <meta name="description" content="Ohmyfood est un site qui répertorie les menus de restaurants gastronomiques. Cet outil permet aux clients de composer le menu de leur repas pour que les plats soient prêts à leur arrivée.">
-        <link rel="stylesheet" href="css/style.css">        
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Shrikhand&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/115d64e2bc.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/style-menu.css">        
     </head>
 
     <body>
