--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <h2>Restaurants</h2>
             <div class="cards__list">
                 <div class="card">
-                    <a href="Menu-Palette-Gout.html">
-                        <img class="card__img" src="Images/restaurants/palette-gout.jpg" alt="La palette du goût">
+                    <a href="menu-Palette-Gout.html">
+                        <img class="card__img" src="images/restaurants/palette-gout.jpg" alt="La palette du goût">
                     </a>
                     <div class="card__body">
                         <div class="card__description">
@@ -73,8 +73,8 @@
                     <span class="card__status">Nouveau</span>
                 </div>
                 <div class="card">
-                    <a href="Menu-Note-Enchantee.html">
-                        <img class="card__img" src="Images/restaurants/note-enchante.jpg" alt="La note enchantée">
+                    <a href="menu-Note-Enchantee.html">
+                        <img class="card__img" src="images/restaurants/note-enchante.jpg" alt="La note enchantée">
                     </a>
                     <div class="card__body">
                         <div class="card__description">
@@ -89,8 +89,8 @@
                     <span class="card__status">Nouveau</span>
                 </div>
                 <div class="card">
-                    <a href="Menu-French.html">
-                        <img class="card__img" src="Images/restaurants/french.jpg" alt="À la française">
+                    <a href="menu-French.html">
+                        <img class="card__img" src="images/restaurants/french.jpg" alt="À la française">
                     </a>
                     <div class="card__body">
                         <div class="card__description">
@@ -104,8 +104,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="Menu-Delice-Sens.html">
-                        <img class="card__img" src="Images/restaurants/delice-sens.jpg" alt="Le délice des sens">
+                    <a href="menu-Delice-Sens.html">
+                        <img class="card__img" src="images/restaurants/delice-sens.jpg" alt="Le délice des sens">
                     </a>
                     <div class="card__body">
                         <div class="card__description">
