--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2>Restaurants</h2>
             <div class="cards__list">
                 <div class="card">
-                    <a href="menu-Palette-Gout.html">
+                    <a href="menu-palette-gout.html">
                         <img class="card__img" src="images/restaurants/palette-gout.jpg" alt="La palette du goût">
                     </a>
                     <div class="card__body">
@@ -73,7 +73,7 @@
                     <span class="card__status">Nouveau</span>
                 </div>
                 <div class="card">
-                    <a href="menu-Note-Enchantee.html">
+                    <a href="menu-note-enchantee.html">
                         <img class="card__img" src="images/restaurants/note-enchante.jpg" alt="La note enchantée">
                     </a>
                     <div class="card__body">
@@ -89,7 +89,7 @@
                     <span class="card__status">Nouveau</span>
                 </div>
                 <div class="card">
-                    <a href="menu-French.html">
+                    <a href="menu-french.html">
                         <img class="card__img" src="images/restaurants/french.jpg" alt="À la française">
                     </a>
                     <div class="card__body">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="menu-Delice-Sens.html">
+                    <a href="menu-delice-sens.html">
                         <img class="card__img" src="images/restaurants/delice-sens.jpg" alt="Le délice des sens">
                     </a>
                     <div class="card__body">
