--- a/index.html
+++ b/index.html
@@ -12,129 +12,135 @@
 
     <body>
 
-        <!-- Header -->
-        <header class="header">
-            <h1 class="header__logo">Ohmyfood</h1>
-        </header>
-
-        <!-- Location -->
-        <section class="location">
-            <span class="location__logo"><i class="fas fa-map-marker-alt"></i></span>
-            <input type="text" class="location__search" placeholder="Paris, Belleville">
-        </section>
-
-        <!-- Section Restaurants -->
-        <section class="restaurants">
-            <h2>Réservez le menu qui vous convient</h2>
-            <p class="restaurants__description">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <a href="#cards" class="btn">Explorer nos restaurants</a>
-        </section>
-
-        <!-- Section Steps -->
-        <section class="steps">
-            <h2>Fonctionnement</h2>
-            <div class="steps__list">
-                <div class="step">
-                    <span class="step__icon"><i class="fas fa-mobile-alt"></i></span>
-                    <h3 class="step__title">Choisissez un restaurant</h3>
-                    <span class="step__number">1</span>
-                </div>
-                <div class="step">
-                    <span class="step__icon"><i class="fas fa-list-ul"></i></span>
-                    <h3 class="step__title">Composez votre menu</h3>
-                    <span class="step__number">2</span>
-                </div>
-                <div class="step">
-                    <span class="step__icon"><i class="fas fas fa-store"></i></span>
-                    <h3 class="step__title">Dégustez au restaurant</h3>
-                    <span class="step__number">3</span>
-                </div>
+            <div class="loader">
+                <span class="loader__circles"></span>
             </div>
-        </section>
+        
+        <main id="content">
+            <!-- Header -->
+            <header class="header">
+                <h1 class="header__logo">Ohmyfood</h1>
+            </header>
 
-        <!-- Section Cards -->
-        <section id="cards" class="cards">
-            <h2>Restaurants</h2>
-            <div class="cards__list">
-                <div class="card">
-                    <a href="menu-palette-gout.html">
-                        <img class="card__img" src="images/restaurants/palette-gout.jpg" alt="La palette du goût">
-                    </a>
-                    <div class="card__body">
-                        <div class="card__description">
-                            <h3 class="card_title">La palette du goût</h3>
-                            <h4 class="card__city">Ménilmontant</h4>
-                        </div>
-                        <boutton class="btn-like">
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </boutton>
-                    </div>
-                    <span class="card__status">Nouveau</span>
-                </div>
-                <div class="card">
-                    <a href="menu-note-enchantee.html">
-                        <img class="card__img" src="images/restaurants/note-enchante.jpg" alt="La note enchantée">
-                    </a>
-                    <div class="card__body">
-                        <div class="card__description">
-                            <h3 class="card_title">La note enchantée</h3>
-                            <h4 class="card__city">Charonne</h4>
-                        </div>
-                        <boutton class="btn-like">
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </boutton>
-                    </div>
-                    <span class="card__status">Nouveau</span>
-                </div>
-                <div class="card">
-                    <a href="menu-french.html">
-                        <img class="card__img" src="images/restaurants/french.jpg" alt="À la française">
-                    </a>
-                    <div class="card__body">
-                        <div class="card__description">
-                            <h3 class="card_title">À la française</h3>
-                            <h4 class="card__city">Cité rouge</h4>
-                        </div>
-                        <boutton class="btn-like">
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </boutton>
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="menu-delice-sens.html">
-                        <img class="card__img" src="images/restaurants/delice-sens.jpg" alt="Le délice des sens">
-                    </a>
-                    <div class="card__body">
-                        <div class="card__description">
-                            <h3 class="card_title">Le délice des sens</h3>
-                            <h4 class="card__city">Folie-Méricourt</h4>
-                        </div>
-                        <boutton class="btn-like">
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </boutton>
-                    </div>
-                </div>
-            </div>
-        </section>
+            <!-- Location -->
+            <section class="location">
+                <span class="location__logo"><i class="fas fa-map-marker-alt"></i></span>
+                <input type="text" class="location__search" placeholder="Paris, Belleville">
+            </section>
 
-        <!-- Footer -->
-        <footer class="footer">
-            <h2 class="footer__title">ohmyfood</h2>
-            <ul class="footer__link">
-                <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
-                <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
-                <li><a href="#">Mentions légales</a></li>
-                <li>
-                    <address>
-                        <a href="mailto:ton@ohmyfood.com">Contact</a>
-                    </address>
-                </li>
-            </ul>
-        </footer>
+            <!-- Section Restaurants -->
+            <section class="restaurants">
+                <h2>Réservez le menu qui vous convient</h2>
+                <p class="restaurants__description">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                <a href="#cards" class="btn">Explorer nos restaurants</a>
+            </section>
+
+            <!-- Section Steps -->
+            <section class="steps">
+                <h2>Fonctionnement</h2>
+                <div class="steps__list">
+                    <div class="step">
+                        <span class="step__icon"><i class="fas fa-mobile-alt"></i></span>
+                        <h3 class="step__title">Choisissez un restaurant</h3>
+                        <span class="step__number">1</span>
+                    </div>
+                    <div class="step">
+                        <span class="step__icon"><i class="fas fa-list-ul"></i></span>
+                        <h3 class="step__title">Composez votre menu</h3>
+                        <span class="step__number">2</span>
+                    </div>
+                    <div class="step">
+                        <span class="step__icon"><i class="fas fas fa-store"></i></span>
+                        <h3 class="step__title">Dégustez au restaurant</h3>
+                        <span class="step__number">3</span>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Section Cards -->
+            <section id="cards" class="cards">
+                <h2>Restaurants</h2>
+                <div class="cards__list">
+                    <div class="card">
+                        <a href="menu-palette-gout.html">
+                            <img class="card__img" src="images/restaurants/palette-gout.jpg" alt="La palette du goût">
+                        </a>
+                        <div class="card__body">
+                            <div class="card__description">
+                                <h3 class="card_title">La palette du goût</h3>
+                                <h4 class="card__city">Ménilmontant</h4>
+                            </div>
+                            <boutton class="btn-like">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </boutton>
+                        </div>
+                        <span class="card__status">Nouveau</span>
+                    </div>
+                    <div class="card">
+                        <a href="menu-note-enchantee.html">
+                            <img class="card__img" src="images/restaurants/note-enchante.jpg" alt="La note enchantée">
+                        </a>
+                        <div class="card__body">
+                            <div class="card__description">
+                                <h3 class="card_title">La note enchantée</h3>
+                                <h4 class="card__city">Charonne</h4>
+                            </div>
+                            <boutton class="btn-like">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </boutton>
+                        </div>
+                        <span class="card__status">Nouveau</span>
+                    </div>
+                    <div class="card">
+                        <a href="menu-french.html">
+                            <img class="card__img" src="images/restaurants/french.jpg" alt="À la française">
+                        </a>
+                        <div class="card__body">
+                            <div class="card__description">
+                                <h3 class="card_title">À la française</h3>
+                                <h4 class="card__city">Cité rouge</h4>
+                            </div>
+                            <boutton class="btn-like">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </boutton>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="menu-delice-sens.html">
+                            <img class="card__img" src="images/restaurants/delice-sens.jpg" alt="Le délice des sens">
+                        </a>
+                        <div class="card__body">
+                            <div class="card__description">
+                                <h3 class="card_title">Le délice des sens</h3>
+                                <h4 class="card__city">Folie-Méricourt</h4>
+                            </div>
+                            <boutton class="btn-like">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </boutton>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Footer -->
+            <footer class="footer">
+                <h2 class="footer__title">ohmyfood</h2>
+                <ul class="footer__link">
+                    <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+                    <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li>
+                        <address>
+                            <a href="mailto:ton@ohmyfood.com">Contact</a>
+                        </address>
+                    </li>
+                </ul>
+            </footer>
+        </main>    
     </body>
 
 </html>
