--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </header>
 
             <!-- Location -->
-            <section class="location">
+            <div class="location">
                 <span class="location__logo"><i class="fas fa-map-marker-alt"></i></span>
                 <input type="text" class="location__search" placeholder="Paris, Belleville">
-            </section>
+            </div>
 
             <!-- Section Restaurants -->
             <section class="restaurants">
@@ -70,10 +70,10 @@
                                 <h3 class="card_title">La palette du goût</h3>
                                 <h4 class="card__city">Ménilmontant</h4>
                             </div>
-                            <boutton class="btn-like">
+                            <div class="btn-like">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
-                            </boutton>
+                            </div>
                         </div>
                         <span class="card__status">Nouveau</span>
                     </div>
@@ -86,10 +86,10 @@
                                 <h3 class="card_title">La note enchantée</h3>
                                 <h4 class="card__city">Charonne</h4>
                             </div>
-                            <boutton class="btn-like">
+                            <div class="btn-like">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
-                            </boutton>
+                            </div>
                         </div>
                         <span class="card__status">Nouveau</span>
                     </div>
@@ -102,10 +102,10 @@
                                 <h3 class="card_title">À la française</h3>
                                 <h4 class="card__city">Cité rouge</h4>
                             </div>
-                            <boutton class="btn-like">
+                            <div class="btn-like">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
-                            </boutton>
+                            </div>
                         </div>
                     </div>
                     <div class="card">
@@ -117,10 +117,10 @@
                                 <h3 class="card_title">Le délice des sens</h3>
                                 <h4 class="card__city">Folie-Méricourt</h4>
                             </div>
-                            <boutton class="btn-like">
+                            <div class="btn-like">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
-                            </boutton>
+                            </div>
                         </div>
                     </div>
                 </div>
